change price to prices to follow api naming best practice
