# SampleApplication/application/manufacturer/api/v1/vehicle/index.js
@@ -16,9 +16,9 @@ router.get('/orders/status/paginated', controller.getOrdersByStatusPaginated);
 router.get('/orders/history', controller.getHistoryForOrder);
 router.post('/', controller.createVehicle);
 router.get('/', controller.getVehicle);
-router.get('/price', controller.getPrice);
-router.get('/price/range', controller.getPriceByRange);
-router.post('/price', controller.updatePrice);
+router.get('/prices', controller.getPrice);
+router.get('/prices/range', controller.getPriceByRange);
+router.post('/prices', controller.updatePrice);
 router.post('/vin/request', controller.requestVIN);
 router.post('/policies/request', controller.requestPolicy);
 router.get('/policies', controller.getPolicy);
