# SampleApplication/application/regulator/api/v1/vehicle/index.js
@@ -13,8 +13,8 @@ router.get('/orders/status', controller.getOrder);
 router.get('/', controller.getVehicle);
 router.post('/owner/change', controller.changeOwner);
 router.delete('/delete', controller.deleteVehicle);
-router.get('/price', controller.getPrice);
-router.get('/price/range', controller.getPriceByRange);
+router.get('/prices', controller.getPrice);
+router.get('/prices/range', controller.getPriceByRange);
 router.post('/vin/issue', controller.issueVIN);
 router.get('/policies', controller.getPolicy);
 
